--- a/apps/proyecto/templates/proyectosLista.html
+++ b/apps/proyecto/templates/proyectosLista.html
@@ -5,14 +5,6 @@
 
   <div class="d-flex justify-content-between">
     <h1>Listado de Proyectos</h1>
-    <a class="btn btn-outline-primary heightBtn" href="{% url 'proyecto:reportes' %}" style="height: 38px">
-      {% include "icon/search.html" %}
-      Reportes
-    </a>
-    <a class="btn btn-outline-success heightBtn" href="{% url 'proyecto:nuevo' %}" style="height: 38px">
-      {% include "icon/plus.html" %}
-      Crear nuevo
-    </a>
   </div>
 
   {% if messages %}
@@ -21,14 +13,77 @@
     {% endfor %}
   {% endif %}
 
+  <div class="container mt-3 mb-3">
+    <div>
+      <form method="POST" class="row justify-content-center">
+        {% csrf_token %}
+        <div class="col-3">
+          <input type="text" placeholder="Buscar" name="buscar" id="buscar" class="form-control">
+        </div>
+        <div class="col-3">
+          <select name="estado" id="estado" class="form-control">
+            <option value="">Seleccione Estado</option>
+            <option value="pendiente">Pendiente</option>
+            <option value="aceptado">Aceptado</option>
+            <option value="observado">Observado</option>
+            <option value="rechazado">Rechazado</option>
+          </select>
+        </div>
+        <div class="col-2">
+          <input type="date" name="fecha_inicio" id="fecha_inicio">
+        </div>
+        <div class="col-2">
+          <input type="date" name="fecha_fin" id="fecha_fin">
+        </div>
+        {% if user.perfil %}
+          {% if user.perfil.tipo_usuario == 'comision' %}
+          <div class="col-2">
+            <button class="btn btn-outline-primary" type="submit">
+              {% include 'icon/search.html' %}
+            </button>
+
+            <a class="btn btn-outline-success" href="{% url 'proyecto:nuevo' %}">
+              {% include "icon/plus.html" %}
+            </a>
+
+            <a class="btn btn-outline-secondary" href="{% url 'proyecto:reportes' %}">
+              {% include 'icon/file.html' %}
+            </a>
+          </div>
+          {% else %}
+          <div class="col-2">
+            <button class="btn btn-outline-primary" type="submit">
+              {% include 'icon/search.html' %}
+              Buscar
+            </button>
+          </div>
+          {% endif %}
+        {% else %}
+        <div class="col-2">
+          <button class="btn btn-outline-primary" type="submit">
+            {% include 'icon/search.html' %}
+          </button>
+
+          <a class="btn btn-outline-success" href="{% url 'proyecto:nuevo' %}">
+            {% include "icon/plus.html" %}
+          </a>
+
+          <a class="btn btn-outline-secondary" href="{% url 'proyecto:reportes' %}">
+            {% include 'icon/file.html' %}
+          </a>
+        </div>
+        {% endif %}
+      </form>
+    </div>
+  </div>
+
   <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Titulo</th>
+      <th scope="col">Título</th>
       <th scope="col">Fecha</th>
       <th scope="col">Estado</th>
-      <th scope="col">Acción</th>
+      <th scope="col">Detalle</th>
     </tr>
   </thead>
   <tbody>
@@ -36,30 +91,29 @@
       {% for proyecto in proyectos %}
 
       <tr>
-        <th scope="row">{{proyecto.id}}</th>
-        <td>{{proyecto.titulo}}</td>
+        <th>{{proyecto.titulo}}</th>
         <td>{{proyecto.presentacion|date:"d-m-Y"}}</td>
         <td>{{proyecto.get_etapa_display}}
            {% if proyecto.estado == 'rechazado' %}
-        <span class="badge text-bg-danger">{{ proyecto.get_estado_display }}</span>
+            <span class="badge text-bg-danger">{{ proyecto.get_estado_display }}</span>
           {% elif proyecto.estado == 'observado' %}
-        <span class="badge text-bg-warning">{{ proyecto.get_estado_display }}</span>
+            <span class="badge text-bg-warning">{{ proyecto.get_estado_display }}</span>
           {% elif proyecto.estado == 'aceptado' %}
-        <span class="badge text-bg-success">{{ proyecto.get_estado_display }}</span>
+            <span class="badge text-bg-success">{{ proyecto.get_estado_display }}</span>
           {% else %}
-        <span class="badge text-bg-primary">{{ proyecto.get_estado_display }}</span>
+            <span class="badge text-bg-primary">{{ proyecto.get_estado_display }}</span>
           {% endif %}
         </td>
         <td>
           <a class="btn btn-outline-primary btn-sm" href="{% url 'proyecto:ver' proyecto.id %}" style="height: 38px">
-            Abrir
+            {% include 'icon/eye.html' %}
           </a>
         </td>
       </tr>
       {% endfor %}
     {% else %}
       <tr>
-        <th scope="row" colspan="5" class="text-center">No se encontraron registros</th>
+        <th scope="row" colspan="4" class="text-center">No se encontraron registros</th>
       </tr>
     {% endif %}
   </tbody>
