--- a/apps/proyecto/templates/proyectosReportes.html
+++ b/apps/proyecto/templates/proyectosReportes.html
@@ -13,81 +13,99 @@
     {% endfor %}
   {% endif %}
 
-  Cantidad de proyectos iniciados por año:
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Año</th>
-        <th scope="col">Cantidad</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% if reportes_iniciados %}
-        {% for reporte in reportes_iniciados %}
-
-        <tr>
-          <td class="col-6" scope="row">{{reporte.año_inicio}}</td>
-          <td class="col-6">{{reporte.total_iniciados}}</td>
-        </tr>
-        {% endfor %}
-      {% else %}
-        <tr>
-          <td scope="row" colspan="2" class="text-center">No se encontraron registros</td>
-        </tr>
-      {% endif %}
-    </tbody>
-  </table>
-
-
-  Cantidad de proyectos finalizados por año:
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Año</th>
-        <th scope="col">Cantidad</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% if reportes_finalizados %}
-        {% for reporte in reportes_finalizados %}
-          {% if reporte.año_fin != None %}
+  <div class="container text-center mt-3">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        Proyectos iniciados por año:
+        <table class="table table-striped table-hover">
+          <thead>
             <tr>
-              <td class="col-6" scope="row">{{reporte.año_fin}}</td>
-              <td class="col-6">{{reporte.total_terminados}}</td>
+              <th scope="col">Año</th>
+              <th scope="col">Cantidad</th>
             </tr>
-          {% endif %}
-        {% endfor %}
-      {% else %}
-        <tr>
-          <th scope="row" colspan="2" class="text-center">No se encontraron registros</th>
-        </tr>
-      {% endif %}
-    </tbody>
-  </table>
+          </thead>
+          <tbody>
+            {% if reportes_iniciados %}
+              {% for reporte in reportes_iniciados %}
+
+              <tr>
+                <td class="col-6" scope="row">{{reporte.año_inicio}}</td>
+                <td class="col-6">{{reporte.total_iniciados}}</td>
+              </tr>
+              {% endfor %}
+            {% else %}
+              <tr>
+                <td scope="row" colspan="2" class="text-center">No se encontraron registros</td>
+              </tr>
+            {% endif %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
 
-  Cantidad de proyectos iniciados y finalizados en el mismo año:
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th scope="col">Año</th>
-        <th scope="col">Cantidad</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% if reportes_anual %}
-        {% for reporte in reportes_anual %}
-        <tr>
-          <td class="col-6" scope="row">{{reporte.año_inicio}}</td>
-          <td class="col-6">{{reporte.total_iniciados_y_terminados}}</td>
-        </tr>
-        {% endfor %}
-      {% else %}
-        <tr>
-          <th scope="row" colspan="2" class="text-center">No se encontraron registros</th>
-        </tr>
-      {% endif %}
-    </tbody>
-  </table>
+  <div class="container text-center mt-3">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        Proyectos finalizados por año:
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Año</th>
+              <th scope="col">Cantidad</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% if reportes_finalizados %}
+              {% for reporte in reportes_finalizados %}
+                {% if reporte.año_fin != None %}
+                  <tr>
+                    <td class="col-6" scope="row">{{reporte.año_fin}}</td>
+                    <td class="col-6">{{reporte.total_terminados}}</td>
+                  </tr>
+                {% endif %}
+              {% endfor %}
+            {% else %}
+              <tr>
+                <th scope="row" colspan="2" class="text-center">No se encontraron registros</th>
+              </tr>
+            {% endif %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="container text-center mt-3">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        Proyectos iniciados y finalizados en el mismo año:
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Año</th>
+              <th scope="col">Cantidad</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% if reportes_anual %}
+              {% for reporte in reportes_anual %}
+              <tr>
+                <td class="col-6" scope="row">{{reporte.año_inicio}}</td>
+                <td class="col-6">{{reporte.total_iniciados_y_terminados}}</td>
+              </tr>
+              {% endfor %}
+            {% else %}
+              <tr>
+                <th scope="row" colspan="2" class="text-center">No se encontraron registros</th>
+              </tr>
+            {% endif %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock %}
