--- a/apps/proyecto/templates/ver.html
+++ b/apps/proyecto/templates/ver.html
@@ -79,41 +79,68 @@
     {% endfor %}
   {% endif %}
 
-  <div class="mb-3">
-    Titulo: <strong>{{proyecto.titulo}}</strong>
-  </div>
-  <div class="mb-3">
-    Descripción: <strong>{{proyecto.descripcion}}</strong>
-  </div>
-  <div class="mb-3">
-    Fecha de presentación: <strong>{{proyecto.presentacion|date:"d-m-Y"}}</strong>
-  </div>
-  <div class="mb-3">
-    Archivos:
-    {% if proyecto.archivos %}
-      <a href="{% url 'proyecto:archivo_proy' proyecto.id %}">Ver Archivo</a>
-    {% else %}
-      <strong>No hay archivo adjunto.</strong>
-    {% endif %}
-  </div>
-  {% if proyecto.borrador %}
-  <div class="mb-3">
-    Borrador:
-    <a href="{% url 'proyecto:borrador_proy' proyecto.id %}">Ver Archivo</a>
-  </div>
-  {% endif %}
-  {% if proyecto.defensa_fecha %}
-  <div class="mb-3">
-    Defensa:
-    <strong>{{proyecto.defensa_fecha|date:"d-m-Y"}}</strong> / Nota: <strong>{{proyecto.defensa_nota}}</strong>
-  </div>
-  {% endif %}
-  <div class="mb-3">
-    Etapa Actual: <strong>{{ actual.get_etapa_display }}</strong>
-  </div>
-  <div class="mb-3">
-    Estado Actual:
-    <span class="badge text-bg-{{ actual.color }}">{{ actual.get_estado_display }}</span>
+
+  <div class="container text-center mt-3">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <table class="table table-striped table-hover col-6">
+          <tbody>
+            <tr>
+              <td class="text-center">Título</td>
+              <th class="text-center">{{proyecto.titulo}}</th>
+            </tr>
+            <tr>
+              <td class="text-center">Descripción</td>
+              <th class="text-center">{{proyecto.descripcion}}</th>
+            </tr>
+            <tr>
+              <td class="text-center">Fecha de Presentación</td>
+              <th class="text-center">{{proyecto.presentacion|date:"d-m-Y"}}</th>
+            </tr>
+            <tr>
+              <td class="text-center">Archivo</td>
+              <th class="text-center">
+                {% if proyecto.archivos %}
+                  <a class="btn btn-outline-primary" href="{% url 'proyecto:archivo_proy' proyecto.id %}">
+                    {% include 'icon/file.html' %}
+                    Descargar
+                  </a>
+                {% else %}
+                  No hay archivo adjunto
+                {% endif %}
+              </th>
+            </tr>
+            {% if proyecto.borrador %}
+            <tr>
+              <td class="text-center">Borrador</td>
+              <th class="text-center">
+                <a class="btn btn-outline-primary" href="{% url 'proyecto:borrador_proy' proyecto.id %}">
+                  {% include 'icon/file.html' %}
+                  Descargar
+                </a>
+              </th>
+            </tr>
+            {% endif %}
+            {% if proyecto.defensa_fecha %}
+            <tr>
+              <td class="text-center">Defensa</td>
+              <th class="text-center">
+                {{proyecto.defensa_fecha|date:"d-m-Y"}} / Nota: {{proyecto.defensa_nota}}
+              </th>
+            </tr>
+            {% endif %}
+            <tr>
+              <td class="text-center">Etapa Actual</td>
+              <th class="text-center">{{ actual.get_etapa_display }}</th>
+            </tr>
+            <tr>
+              <td class="text-center">Estado Actual</td>
+              <th class="text-center"><span class="badge text-bg-{{ actual.color }}">{{ actual.get_estado_display }}</span></th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
   <hr/>
 
@@ -121,14 +148,15 @@
     Información de los estudiantes
   </button>
   <div class="collapse" id="collapseExample">
-
-  <div class="d-flex justify-content-between">
-    <span>Estudiantes:</span>
-    <button type="button" class="btn btn-outline-success heightBtn" data-bs-toggle="modal" data-bs-target="#estudianteModal">
-      {% include "icon/plus.html" %}
-      Agregar
-    </button>
-  </div>
+  {% if user.perfil.tipo_usuario == 'comision' %}
+      <div class="d-flex justify-content-between">
+        <span>Estudiantes:</span>
+        <button type="button" class="btn btn-outline-success heightBtn" data-bs-toggle="modal" data-bs-target="#estudianteModal">
+          {% include "icon/plus.html" %}
+          Agregar
+        </button>
+      </div>
+  {% endif %}
   <!-- Modal Estudiantes -->
   <div class="modal fade" id="estudianteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -162,10 +190,12 @@
     <tr>
       <th scope="col">Apellido y Nombre</th>
       <th scope="col">DNI</th>
-      <th scope="col">Matricula</th>
+      <th scope="col">Matrícula</th>
       <th scope="col">Fecha de Alta</th>
       <th scope="col">Estado</th>
-      <th scope="col">Acciones</th>
+      {% if user.perfil.tipo_usuario == 'comision' %}
+        <th scope="col">Acciones</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -180,6 +210,7 @@
         <td>
           <span class="badge text-bg-success">Activo</span>
         </td>
+        {% if user.perfil.tipo_usuario == 'comision' %}
         <td>
           <form method="POST" action="{% url 'proyecto:delEstudiante' %}">
             {% csrf_token %}
@@ -192,6 +223,7 @@
             </button>
           </form>
         </td>
+        {% endif %}
       {% else %}
         <td colspan="2">
           <span class="badge text-bg-danger">Baja: {{estudiante.fecha_baja|date:"d-m-Y H:i:s"}}</span>
@@ -214,6 +246,7 @@
     Información de los docentes
   </button>
   <div class="collapse" id="collapseDocentes">
+  {% if user.perfil.tipo_usuario == 'comision' %}
   <div class="d-flex justify-content-between">
     <span>Docentes:</span>
     <button type="button" class="btn btn-outline-success heightBtn" data-bs-toggle="modal" data-bs-target="#docenteModal">
@@ -221,6 +254,7 @@
       Agregar
     </button>
   </div>
+  {% endif %}
   <!-- Modal Docentes -->
   <div class="modal fade" id="docenteModal" tabindex="-1" aria-labelledby="docenteModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -257,7 +291,9 @@
       <th scope="col">Cargo</th>
       <th scope="col">Fecha de Alta</th>
       <th scope="col">Estado</th>
+      {% if user.perfil.tipo_usuario == 'comision' %}
       <th scope="col">Acciones</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -272,6 +308,7 @@
         <td>
           <span class="badge text-bg-success">Activo</span>
         </td>
+        {% if user.perfil.tipo_usuario == 'comision' %}
         <td>
           <form method="POST" action="{% url 'proyecto:delDocente' %}">
             {% csrf_token %}
@@ -284,6 +321,7 @@
             </button>
           </form>
         </td>
+        {% endif %}
       {% else %}
         <td colspan="2">
           <span class="badge text-bg-danger">Baja: {{docente.fecha_baja|date:"d-m-Y H:i:s"}}</span>
@@ -346,7 +384,6 @@
   <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">Disposición Número</th>
       <th scope="col">Fecha</th>
       <th scope="col">Presidente</th>
@@ -355,10 +392,9 @@
   <tbody>
     {% if proyecto.tribunal %}
       <tr>
-        <td>{{ proyecto.tribunal.id }}</td>
-        <td>{{ proyecto.tribunal.disposicion_numero }}</td>
+        <th>{{ proyecto.tribunal.disposicion_numero }}</th>
         <td>{{ proyecto.tribunal.disposicion_fecha|date:"d-m-Y" }}</td>
-        <td>{{ proyecto.tribunal.presidente }}</td>
+        <td>{{ proyecto.tribunal.presidente.user.apellido }}, {{ proyecto.tribunal.presidente.user.nombre }}</td>
       </tr>
     {% else %}
       <tr>
@@ -402,8 +438,9 @@
       <td>{{ movimiento.fecha_hora|date:"d-m-Y H:i:s" }}</td>
       <td>
         {% if movimiento.informe_archivo %}
-        <a href="{% url 'movimiento:archivo_mov' movimiento.id %}" target="_blank">
-          {% include "icon/search.html" %}
+        <a class="btn btn-outline-primary" href="{% url 'movimiento:archivo_mov' movimiento.id %}" target="_blank">
+          {% include "icon/file.html" %}
+          {{ movimiento.informe_fecha|date:"d-m-Y" }}
         </a>
         {% endif %}
       </td>
