--- a/apps/tribunal/templates/tribunalLista.html
+++ b/apps/tribunal/templates/tribunalLista.html
@@ -5,10 +5,6 @@
 
   <div class="d-flex justify-content-between">
     <h1>Listado de Tribunales</h1>
-    <a class="btn btn-outline-success heightBtn" href="{% url 'tribunal:nuevo' %}" style="height: 38px">
-      {% include "icon/plus.html" %}
-      Crear nuevo
-    </a>
   </div>
 
   {% if messages %}
@@ -17,14 +13,41 @@
     {% endfor %}
   {% endif %}
 
+  <div class="container mt-3 mb-3">
+    <div>
+      <form method="POST" class="row justify-content-center">
+        {% csrf_token %}
+        <div class="col-3">
+          <input type="text" placeholder="Buscar" name="buscar" id="buscar" class="form-control">
+        </div>
+        <div class="col-3">
+          <input type="date" name="fecha_inicio" id="fecha_inicio">
+        </div>
+        <div class="col-3">
+          <input type="date" name="fecha_fin" id="fecha_fin">
+        </div>
+        <div class="col-3">
+          <button class="btn btn-outline-primary" type="submit">
+            {% include 'icon/search.html' %}
+            Buscar
+          </button>
+
+          <a class="btn btn-outline-success" href="{% url 'tribunal:nuevo' %}">
+            {% include "icon/plus.html" %}
+            Nuevo
+          </a>
+        </div>
+      </form>
+    </div>
+  </div>
+
   <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">Disposición Número</th>
-      <th scope="col">Fecha</th>
+      <th scope="col">Fecha de la disposición</th>
       <th scope="col">Presidente</th>
-      <th scope="col">Acción</th>
+      <th scope="col">Detalle</th>
     </tr>
   </thead>
   <tbody>
@@ -32,13 +55,12 @@
       {% for tribunal in tribunales %}
 
       <tr>
-        <th scope="row">{{tribunal.id}}</th>
-        <td>{{tribunal.disposicion_numero}}</td>
+        <th>{{tribunal.disposicion_numero}}</th>
         <td>{{tribunal.disposicion_fecha|date:"d-m-Y"}}</td>
-        <td>{{tribunal.presidente}}</td>
+        <td>{{tribunal.presidente.user.apellido}}, {{tribunal.presidente.user.nombre}}</td>
         <td>
           <a class="btn btn-outline-primary btn-sm" href="{% url 'tribunal:ver' tribunal.id %}" style="height: 38px">
-            Abrir
+            {% include 'icon/eye.html' %}
           </a>
         </td>
       </tr>
